# browser-tools

./: README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/services/: __init__.py  agent.py
app/static/: index.html
